Update devDependencies. Use browserify instead gulp.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-.DS_Store
+# Logs
+*.log
+
+# Dependency directory
 node_modules
+
+# Trash
+.DS_Store
+
+# Test Files that should be ignored
+coverage
