--- a/package.json
+++ b/package.json
@@ -2,24 +2,23 @@
   "name": "horwheel",
   "version": "1.0.0",
   "description": "Scroll horizontally with mouse wheel",
-  "author": "@pazguille <guille87paz@gmail.com>",
+  "author": "Guille Paz <guille87paz@gmail.com>",
   "scripts": {
-    "dist": "node_modules/.bin/gulp",
-    "test": "npm run dist && node_modules/.bin/_mocha"
+    "build": "node browserify.js",
+    "dist": "npm run build && uglifyjs ./dist/horwheel.js -m -o ./dist/horwheel.min.js",
+    "test": "npm run build && istanbul cover _mocha",
+    "lint": "eslint index.js"
   },
-  "repository": "git@github.com:pazguille/aload.git",
   "dependencies": {},
   "devDependencies": {
-    "better-assert": "1.0.1",
-    "gulp": "3.6.2",
-    "gulp-footer": "1.0.5",
-    "gulp-header": "1.0.5",
-    "gulp-rename": "1.2.0",
-    "gulp-replace": "0.4.0",
-    "gulp-uglify": "0.3.1",
-    "jsdom": "3.1.1",
-    "mkdirp": "0.3.5",
-    "mocha": "2.1.0"
+    "browserify": "13.1.1",
+    "eslint": "3.10.2",
+    "eslint-config-airbnb-base": "10.0.1",
+    "eslint-plugin-import": "2.2.0",
+    "istanbul": "0.4.5",
+    "lint": "eslint",
+    "mocha": "2.1.0",
+    "uglifyjs": "2.4.10"
   },
   "keywords": [
     "wheel",
